1002
Does not crash 2.7.1 final

Welcome to Scala version 2.7.1.final (OpenJDK Client VM, Java 1.6.0).
Type in expressions to have them evaluated.
Type :help for more information.

scala> 1+=1
<console>:5: error: value += is not a member of Int
       1+=1
        ^
